--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -65,7 +65,7 @@
       </div>
     </form>
 
-    <div class="app-login__divider">
+    <!-- <div class="app-login__divider">
       <div class="app-divider">
         <span></span>
         <span style="color: #090909">Oder</span>
@@ -88,6 +88,6 @@
         <i class="fab fa-google"></i>
         Google
       </button>
-    </div>
+    </div>-->
   </div>
 </div>
