--- a/src/app/views/pages/setup/start/start.component.html
+++ b/src/app/views/pages/setup/start/start.component.html
@@ -5,23 +5,23 @@
       style="background-image: url('/assets/media/misc/bg-1.jpg'); max-width: 500px;">
 
       <div class="app-grid__item">
-        <a [routerLink]="['/']" class="app-login__logo" [title]="env.appDefaults.site.title">
-          <img [src]="env.appDefaults.site.logo" style="width: 160px;" [alt]="env.appDefaults.site.title">
+        <a [routerLink]="['/']" class="app-login__logo" [title]="defaults.site.title">
+          <img [src]="defaults.site.logo" style="width: 160px;" [alt]="defaults.site.title">
         </a>
-        <h3 class="app-login__title mt-5">{{ env.appDefaults.site.title }}</h3>
-        <h4 class="app-login__subtitle">{{ env.appDefaults.site.description }}</h4>
+        <h3 class="app-login__title mt-5">{{ defaults.site.title }}</h3>
+        <h4 class="app-login__subtitle">{{ defaults.site.description }}</h4>
       </div>
 
       <div class="app-grid__item app-grid__item--fluid app-grid app-grid--ver">
         <div class="app-grid__item app-grid__item--middle">
-          <!-- <h3 class="app-login__title">{{ env.appDefaults.site.title }}</h3>
-          <h4 class="app-login__subtitle">{{ env.appDefaults.site.description }}</h4>-->
+          <!-- <h3 class="app-login__title">{{ defaults.site.title }}</h3>
+          <h4 class="app-login__subtitle">{{ defaults.site.description }}</h4>-->
         </div>
       </div>
       <div class="app-grid__item">
         <div class="app-login__info">
           <div class="app-login__copyright">
-            © {{today | date: 'mediumDate'}} {{env.appDefaults.site.title}}
+            © {{today | date: 'mediumDate'}} {{defaults.site.title}}
           </div>
         </div>
       </div>
