--- a/projects/sfw-frontend/src/app/modules/start/start-index/latest-results/latest-results.component.html
+++ b/projects/sfw-frontend/src/app/modules/start/start-index/latest-results/latest-results.component.html
@@ -15,7 +15,7 @@
       <div class="col-xl-11 col-lg-11 col-md-12 p-0 offset-md-1">
         <div class="variable_width">
 
-          <ngx-slick-carousel #slickModal="slick-carousel" [config]="slideConfig">
+          <!-- <ngx-slick-carousel #slickModal="slick-carousel" [config]="slideConfig">
 
             <div ngxSlickItem *ngFor="let match of matches$ | async">
               <div class="result_show text-center">
@@ -54,7 +54,7 @@
               </div>
             </div>
 
-          </ngx-slick-carousel>
+          </ngx-slick-carousel>-->
 
         </div>
       </div>
