--- a/projects/sfw-frontend/src/app/modules/start/start-index/top-news/top-news.component.html
+++ b/projects/sfw-frontend/src/app/modules/start/start-index/top-news/top-news.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-md-12 main_slider">
 
-          <ngx-slick-carousel #slickModal="slick-carousel" [config]="slideConfig">
+          <!-- <ngx-slick-carousel #slickModal="slick-carousel" [config]="slideConfig">
 
             <div ngxSlickItem *ngFor="let article of articles">
               <div class="col-md-12">
@@ -34,7 +34,7 @@
               </div>
             </div>
 
-          </ngx-slick-carousel>
+          </ngx-slick-carousel>-->
 
         </div>
       </div>
